--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,14 +1,14 @@
 {
   "site": {
-    "title": "Bookworm Light Astro | Blog Template",
-    "base_url": "https://bookworm-light-astro.vercel.app",
-    "base_path": "/",
+    "title": "Mina Atef",
+    "base_url": "https://MinaAtef1.github.io",
+    "base_path": "blog",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
     "logo": "/images/logo.png",
     "logo_width": "200",
     "logo_height": "34",
-    "logo_text": "Bookworm Light"
+    "logo_text": "Mina Atef"
   },
 
   "settings": {
@@ -23,13 +23,13 @@
   },
 
   "params": {
-    "contact_form_action": "#",
+    "contact_form_action": "",
     "copyright": "Copyright © 2023 a theme by [Themefisher](https://themefisher.com)"
   },
 
   "contactinfo": {
-    "address": "355 S Grand Ave <br/> Los Angeles, CA 90071",
-    "email": "info@bookworm.org",
-    "phone": "+800 567 1234"
+    "address": "Cairo, Egypt",
+    "email": "mina.atef0@gmail.com",
+    "phone": "+2012 7856 3233"
   }
 }
