--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "Mina Atef",
-    "base_url": "https://MinaAtef1.github.io",
+    "base_url": "https://mina-atef.online",
     "base_path": "/blog",
     "trailing_slash": false,
     "logo_text": "Mina Atef"
