--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@playform/compress": "^0.0.13",
     "astro": "^4.9.3",
     "astro-auto-import": "^0.4.2",
     "astro-font": "^0.0.81",
